--- a/SportsDataApp/Views/Seasons/Index.cshtml
+++ b/SportsDataApp/Views/Seasons/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.outcome)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Team.Id)
+                @Html.DisplayFor(modelItem => item.Team.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
