--- a/SportsDataApp/Views/Teams/Index.cshtml
+++ b/SportsDataApp/Views/Teams/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.Abbreviation)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Sport.Id)
+                @Html.DisplayFor(modelItem => item.Sport.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
