Updated Seasons and NFL data

--- a/SportsDataApp/Views/Seasons/Details.cshtml
+++ b/SportsDataApp/Views/Seasons/Details.cshtml
@@ -29,6 +29,12 @@
             @Html.DisplayFor(model => model.losses)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.winPercent)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.winPercent)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.outcome)
         </dt>
         <dd class = "col-sm-10">
