--- a/SportsDataApp/Views/ToDo/Index.cshtml
+++ b/SportsDataApp/Views/ToDo/Index.cshtml
@@ -2,12 +2,6 @@
 <h2>To-Do:</h2>
 <ul>
     <li>
-        Update Season database to store season win percent
-    </li>
-    <li>
-        Write python script to scrape NFL seasons
-    </li>
-    <li>
         Make more tables/think of more of them
     </li>
     <li>
@@ -15,5 +9,8 @@
     </li>
     <li>
         Update Nav Bar to be more "cool"
+    </li>
+    <li>
+        List NFL data as graphs
     </li>
 </ul>
