--- a/SportsDataApp/Views/Seasons/Edit.cshtml
+++ b/SportsDataApp/Views/Seasons/Edit.cshtml
@@ -29,6 +29,11 @@
                 <span asp-validation-for="losses" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="winPercent" class="control-label"></label>
+                <input asp-for="winPercent" class="form-control" />
+                <span asp-validation-for="winPercent" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="outcome" class="control-label"></label>
                 <input asp-for="outcome" class="form-control" />
                 <span asp-validation-for="outcome" class="text-danger"></span>
