--- a/SportsDataApp/Views/Login/LoginPage.cshtml
+++ b/SportsDataApp/Views/Login/LoginPage.cshtml
@@ -1,28 +1,28 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="~/css/site.css" />
+      <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <div class="body-container">
-        <div class="create-user-container">
-            <form asp-action="LoginUser">
-                <ul class="input-fields">
-                    <li>
-                        <div class="form-group">
-                            <input type="text" id="username" class="userInput" placeholder="Enter Username"/>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="form-group">
-                            <input type="password" id="password" class="userInput" placeholder="Enter Password" />
-                        </div>
-                    </li>
-                    <li>
-                        <button class="submit-button"> Submit </button>
-                    </li>
-                </ul>
-            </form>
+        <div class="login-create-container">
+            <div class="login-container">
+                <form asp-action="LoginUser">
+                    <h1>Log In</h1>
+                    <div class="form-group">
+                        <input type="text" id="username" class="userInput" placeholder="Enter Username" />
+                    </div>
+                    <div class="form-group">
+                        <input type="password" id="password" class="userInput" placeholder="Enter Password" />
+                    </div>
+                    <button class="submit-button">Submit</button>
+                </form>
+            </div>
+            <div class="create-container">
+                <h1>Create New User</h1>
+                <p>New User? Click the button below to create an account.</p>
+                <button asp-action="CreateUser" class="nav-create-user">Click Here</button>
+            </div>
         </div>
     </div>
 </body>
