--- a/SportsDataApp/wwwroot/css/_Layout.css
+++ b/SportsDataApp/wwwroot/css/_Layout.css
@@ -53,7 +53,11 @@ header {
     display: block;
 }
 
-    .dropdown-content a:hover {
+.dropdown-content a:hover {
         background-color: #444;
-    }
+}
+.log-in-button {
+    position: absolute;
+    right: 10px;
+}
 
