--- a/SportsDataApp/wwwroot/css/site.css
+++ b/SportsDataApp/wwwroot/css/site.css
@@ -2,6 +2,10 @@
 html {
     font-size: 14px;
 }
+html, body {
+    margin: 0;
+    padding: 0;
+}
 
 @media (min-width: 768px) {
     html {
@@ -9,52 +13,65 @@ html {
     }
 }
 
-html {
-    position: relative;
-    min-height: 100%;
-}
-
 body {
-    margin-bottom: 60px;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
 }
 
 .body-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80vh;
-    width: 100%;
+    height: 100vh;
 }
 
-.input-fields {
-    list-style-type: none;
-}
-
-.create-user-container {
+.login-create-container {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50vh;
-    background-color: lightgrey;
-    margin-top: 10%;
-    border-radius: 10px;
-    box-shadow: 5px;
-    width: 50%;
+    width: 600px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+.login-container {
+    padding: 20px;
+    text-align: center;
+}
+
+.create-container {
+    padding: 20px;
+    background-color: #f4f4f4;
+    text-align: center;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
 .userInput {
-    margin-top: 10px;
-    border-radius: 5px;
-    display: block;
     width: 100%;
-    padding: 5px;
-}
-
-.submit-button{
-    margin-top: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
     border-radius: 5px;
+    outline: none;
+    padding-left: 10px;
 }
 
-.submit-button:hover{
-    color: lightgrey;
+.submit-button {
+    background-color: #007BFF;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.nav-create-user {
+    background-color: #28A745;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
