--- a/SportsDataApp/Views/Login/LoginPage.cshtml
+++ b/SportsDataApp/Views/Login/LoginPage.cshtml
@@ -4,24 +4,27 @@
       <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <div class="body-container">
-        <div class="login-create-container">
-            <div class="login-container">
+    <div class="login-container">
+        <div class="inner-box">      
+            <div class="login-side-containers">
                 <form asp-action="LoginUser">
                     <h1>Log In</h1>
-                    <div class="form-group">
-                        <input type="text" id="username" class="userInput" placeholder="Enter Username" />
+                    <div class="input-form">
+                        <input type="text" id="username" class="user-input" placeholder="Enter Username" />
                     </div>
-                    <div class="form-group">
-                        <input type="password" id="password" class="userInput" placeholder="Enter Password" />
+                    <div class="input-form">
+                        <input type="password" id="password" class="user-input" placeholder="Enter Password" />
                     </div>
                     <button class="submit-button">Submit</button>
                 </form>
             </div>
-            <div class="create-container">
+            <div class="create-side-containers">
                 <h1>Create New User</h1>
                 <p>New User? Click the button below to create an account.</p>
-                <button asp-action="CreateUser" class="nav-create-user">Click Here</button>
+                @using (Html.BeginForm("Create", "Login"))
+                {
+                    <input type="submit" value="Submit" class="btn" />
+                }
             </div>
         </div>
     </div>
