Authenicated Login using Sessions

--- a/SportsDataApp/Views/Login/Index.cshtml
+++ b/SportsDataApp/Views/Login/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SportsDataApp.Models.User>
+﻿@model IEnumerable<SportsDataApp.Models.LoginUser>
 
 @{
     ViewData["Title"] = "Index";
