--- a/SportsDataApp/Views/ToDo/Index.cshtml
+++ b/SportsDataApp/Views/ToDo/Index.cshtml
@@ -14,3 +14,21 @@
         List NFL data as graphs
     </li>
 </ul>
+<h2>To-Do for Invoice App</h2>
+<ul>
+    <li>
+        Parse through pdf and store into db
+    </li>
+    <li>
+        Fix database dependencies
+    </li>
+    <li>
+
+    </li>
+    <li>
+        Make admin accounts
+    </li>
+    <li>
+
+    </li>
+</ul>
