--- a/SportsDataApp/Views/Shared/_Layout.cshtml
+++ b/SportsDataApp/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" /> *@
     <link rel="stylesheet" href="~/css/_Layout.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/InvoiceApplication.styles.css" asp-append-version="true" />
+
 </head>
 <body>
     <header>
@@ -35,11 +35,12 @@
             </ul>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+    <section class="content">
+                @RenderBody()
+    </section>
+    <footer>
+        <span style="margin: 0 auto;" class = "footer"></span>
+    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
