--- a/SportsDataApp/Views/Teams/Index.cshtml
+++ b/SportsDataApp/Views/Teams/Index.cshtml
@@ -3,29 +3,30 @@
 @{
     ViewData["Title"] = "Index";
 }
-
-<h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="~/css/data.css" asp-append-version="true" />
+</head>
+<body>
+    <div class = "table-container">
+    <table class="data-tables">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                Team Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Abbreviation)
+                Abbrev
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Sport)
+                Sport
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
@@ -44,4 +45,8 @@
         </tr>
 }
     </tbody>
-</table>
+    </table>
+    </div>
+</body>
+
+
