--- a/SportsDataApp/wwwroot/css/_Layout.css
+++ b/SportsDataApp/wwwroot/css/_Layout.css
@@ -1,11 +1,19 @@
-﻿body {
+﻿
+body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    min-height: 100vh;
+    min-width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    font-family: Arial,Helvetica,sans-serif;
+    background-color: grey;
+    flex-wrap: wrap;
 }
 
 header {
-    background-color: #333;
+    background-color: grey;
     color: #fff;
     padding: 10px 0;
 }
@@ -18,14 +26,14 @@ header {
     margin-top: 12px;
 }
 
-    .navbar li {
-        margin: 0 20px;
-    }
+.navbar li {
+    margin: 0 20px;
+}
 
-        .navbar li a {
-            color: #fff;
-            text-decoration: none;
-        }
+.navbar li a {
+   color: #fff;
+   text-decoration: none;
+ }
 
 .dropdown {
     position: relative;
@@ -61,3 +69,26 @@ header {
     right: 10px;
 }
 
+.content {
+    display: flex;
+    flex-grow: 1;
+    height: auto;
+    background-color: white;
+    min-width: 100vw;
+    flex-wrap: wrap;
+}
+
+.footer {
+    margin: 0 auto;
+    display: block;
+    bottom: 0;
+    color: #808080;
+    background-color: #eeeeee;
+    width: 100vw;
+    text-align: center;
+    padding: 18px 0;
+    text-align: center;
+    font-size: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
